--- a/TaskManager/MainWindow.xaml
+++ b/TaskManager/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="478.328" Width="869" MinHeight="500" MinWidth="800">
+        Title="MainWindow" Height="594" Width="879" MinHeight="500" MinWidth="800">
     <Grid Margin="0,0,2,-1">
         <Grid.RowDefinitions>
-            <RowDefinition Height="59*"/>
+            <RowDefinition Height="130*"/>
+            <RowDefinition Height="6*"/>
             <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -40,12 +41,17 @@
         </RichTextBox>
         <TextBlock x:Name="startDateText" HorizontalAlignment="Left" Margin="5,10,0,0" TextWrapping="Wrap" Text="Date de début" VerticalAlignment="Top" Height="16" Width="110" Grid.Column="5"/>
         <TextBlock x:Name="endDateText" HorizontalAlignment="Left" Margin="17,10,0,0" TextWrapping="Wrap" Text="Date de fin" VerticalAlignment="Top" Height="16" Width="110" Grid.Column="6"/>
-        <Button x:Name="saveTask" Content="Enregistrer" HorizontalAlignment="Right" Margin="0,0,119,10" Width="75" Click="saveTask_Click" Grid.Column="6" Height="20" VerticalAlignment="Bottom" Grid.Row="1"/>
-        <Button x:Name="remTask" Content="Supprimer" Margin="0,0,39,10" Grid.Column="6" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" Click="remTask_click" Grid.Row="1"/>
+        <Button x:Name="saveTask" Content="Enregistrer" HorizontalAlignment="Right" Margin="0,0,114,0" Width="75" Click="saveTask_Click" Grid.Column="6" Height="20" VerticalAlignment="Bottom" Grid.Row="1"/>
+        <Button x:Name="remTask" Content="Supprimer" Margin="0,0,34,0" Grid.Column="6" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" Click="remTask_click" Grid.Row="1"/>
         <ComboBox x:Name="comboBox" Margin="3,38,0,0" VerticalAlignment="Top" SelectionChanged="comboBox_SelectionChanged" StaysOpenOnEdit="True" Height="22" Grid.ColumnSpan="2"/>
         <Button x:Name="addContainer" Content="+" Margin="0,38,0,0" VerticalAlignment="Top" Height="22" Click="addContainer_Click" Grid.Column="2"/>
         <Button x:Name="remContainer" Content="-" Margin="0,38,0,0" VerticalAlignment="Top" Height="22" RenderTransformOrigin="1.136,0.636" Click="remContainer_Click" Grid.Column="3"/>
-        <TextBox x:Name="searchText" Margin="3,0,0,0" TextWrapping="Wrap" Text="" Grid.Row="1" Height="25" VerticalAlignment="Top"/>
-        <Button x:Name="search" Content="Rechercher" Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="1" Height="25" VerticalAlignment="Top" Click="search_Click"/>
+        <TextBox x:Name="searchText" Margin="3,0,0,0" TextWrapping="Wrap" Text="" Grid.Row="1" Height="24" VerticalAlignment="Top"/>
+        <Button x:Name="search" Content="Rechercher" Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="1" Height="24" VerticalAlignment="Top" Click="search_Click"/>
+        <StatusBar Grid.ColumnSpan="7" Grid.Row="2" Height="19" VerticalAlignment="Bottom">
+            <StatusBarItem HorizontalAlignment="Center">
+                <TextBlock Name="statusText" Text="Taches: 0, Sous-Taches: 0"/>
+            </StatusBarItem>
+        </StatusBar>
     </Grid>
 </Window>
